# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_hap("dialog_hap") {
  hap_profile = "src/main/module.json"
  deps = [
    ":usb_right_dialog_js_assets",
    ":usb_right_dialog_resources",
  ]
  certificate_profile = "../signature/am.p7b"
  hap_name = "usb_right_dialog"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
  js_build_mode = "release"
  module_install_dir = "app/com.usb.right"
}

ohos_app_scope("usb_right_dialog_app_profile") {
  app_profile = "../AppScope/app.json"
  sources = [ "../AppScope/resources" ]
}

ohos_js_assets("usb_right_dialog_js_assets") {
  ets2abc = true
  source_dir = "src/main/ets"
}

ohos_resources("usb_right_dialog_resources") {
  sources = [ "src/main/resources" ]
  deps = [ ":usb_right_dialog_app_profile" ]
  hap_profile = "src/main/module.json"
}
