# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("./../../../../usbmgr.gni")

config("usbnapi_private_config") {
  include_dirs = [
    "./../../../../../../../foundation/arkui/napi/native_engine",
    "./../../../../../../../foundation/arkui/napi/interfaces/kits",
    "//third_party/node/src",
    "${usb_manager_path}/interfaces/kits/js/napi/include",
    "${usb_manager_path}/interfaces/innerkits/native/include",
  ]
}

ohos_shared_library("usb") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
  }

  sources = [
    "${utils_path}/native/src/usb_napi_errors.cpp",
    "src/napi_util.cpp",
    "src/usb_info.cpp",
    "src/usb_middle.cpp",
  ]
  configs = [
    "${utils_path}:utils_config",
    ":usbnapi_private_config",
  ]
  deps = [
    "${usb_manager_path}/interfaces/innerkits:usbsrv_client",
    "//third_party/bounds_checking_function:libsec_shared",
    "//third_party/cJSON:cjson",
  ]
  external_deps = [
    "drivers_interface_usb:usb_idl_headers_1.1",
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "usb"
  part_name = "usb_manager"
}

ohos_shared_library("usbmanager") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
  }

  sources = [
    "${utils_path}/native/src/usb_napi_errors.cpp",
    "src/napi_util.cpp",
    "src/usb_info.cpp",
    "src/usbmanager_middle.cpp",
  ]
  configs = [
    "${utils_path}:utils_config",
    ":usbnapi_private_config",
  ]
  deps = [
    "${usb_manager_path}/interfaces/innerkits:usbsrv_client",
    "//third_party/bounds_checking_function:libsec_shared",
    "//third_party/cJSON:cjson",
  ]
  external_deps = [
    "drivers_interface_usb:usb_idl_headers_1.1",
    "hilog:libhilog",
    "napi:ace_napi",
  ]

  relative_install_dir = "module"

  subsystem_name = "usb"
  part_name = "usb_manager"
}
